fixed unwanted spacing and color

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -6,3 +6,7 @@ body{
 .navbar, .inputt{
     background-color: #212121;
 }
+
+.item{
+    color: #2AA1B3;
+}
